force-app/main/default/objects/Application_Package__c/Application_Package__c.object-meta.xml
<CustomObject>
    <label>Application Package</label>
    <nameField>
        <label>Application Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>