force-app/main/default/objects/Application_Package__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Application Packages</relationshipLabel>
    <relationshipName>Application_Packages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>