force-app/main/default/objects/Application_Package__c/fields/Join__c.field-meta.xml
<CustomField>
    <fullName>Join__c</fullName>
    <formula>HYPERLINK(Form__r.Lightning_URL__c &amp;&apos;&amp;apppack=&apos;&amp;Id   , &quot;Join&quot;, &quot;_blank&quot;)</formula>
    <label>Join</label>
    <type>Text</type>
</CustomField>